# Womazing

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/api/: urls.py
backend/src/api/v1/: urls.py
backend/src/api/v1/cart/: utils.py  views.py
backend/src/api/v1/coupon/: serializers.py  utils.py  views.py
backend/src/api/v1/store/: serializers.py  utils.py  views.py
backend/src/apps/cart/: cart.py
backend/src/apps/coupon/: admin.py  models.py
backend/src/apps/coupon/migrations/: 0001_initial.py  0002_coupon_discount.py
backend/src/apps/store/: admin.py  models.py
backend/src/apps/store/migrations/: 0001_initial.py  0002_alter_color_color_image_alter_productimage_image.py
backend/src/config/: settings.py  urls.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: BreadCrumbs.vue  CartCoupon.vue  CartEmpty.vue  CartItem.vue  CartItems.vue  CartTotal.vue  ContactUsForm.vue  ModalCallback.vue  NewCollection.vue  OurBenefits.vue  OurTeam.vue  ProductCart.vue  ProductDetail.vue  ProductsCatalog.vue  ProductsCategories.vue  ProductsSimilar.vue  ProductsSorting.vue  StoreLocationMap.vue  TheAbout.vue  TheContacts.vue  TheFooter.vue  TheForm.vue  TheHeader.vue  TheModal.vue  TheRepose.vue
frontend/src/helpers/: validation.js
frontend/src/layouts/: EmptyLayout.vue  MainLayout.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: AboutView.vue  CartView.vue  CheckoutView.vue  ContactsView.vue  HomeView.vue  NotFoundView.vue  Productview.vue  (+1 more)
(+9 files in other folders)
