[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Steve <kornilov.stepan11.s06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.1.0"
psycopg = "^3.1.9"
psycopg2 = "^2.9.6"
unidecode = "^1.3.6"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
